# Multiplayer-Pac-Man

./: .clang-format  .gitignore  CMakeLists.txt  GEMINI.md  README.md
.github/workflows/: cmake-single-platform.yml
App/: CMakeLists.txt
App/Source/: Main.cpp  MainMenuLayer.cpp  MainMenuLayer.h  MenuLayer.cpp  MenuLayer.h
App/Source/BaseMenuLayer/: BaseMenuLayer.cpp  BaseMenuLayer.h
App/Source/BoardSelectionMenuLayer/: BoardSelectionMenuLayer.cpp  BoardSelectionMenuLayer.h
App/Source/GameComponents/: Board.cpp  Board.h  Game.cpp  Game.h  GameLayer.cpp  GameLayer.h  PacMan.cpp  PacMan.h  Pellet.cpp  Pellet.h  Tile.cpp  Tile.h  TileType_json.hpp  Tile_json.hpp
App/Source/GameLayer/: GameLayer.cpp  GameLayer.h
App/Source/GameOptionsComponents/: GameOptionsLayer.cpp  GameOptionsLayer.h
App/Source/GameOptionsMenuLayer/: GameOptionsMenuLayer.cpp  GameOptionsMenuLayer.h
App/Source/MainMenuComponents/: MainMenuLayer.cpp  MainMenuLayer.h
App/Source/MainMenuLayer/: MainMenuLayer.cpp  MainMenuLayer.h
App/Source/OverlayLayer/: OverlayLayer.cpp  OverlayLayer.h
Boards/: default.json
Core/: CMakeLists.txt
Core/Source/Components/: Enums.h  Menu.cpp  Menu.h  MenuOption.cpp  MenuOption.h  RenderableObject.cpp  RenderableObject.h  Text.cpp  Text.h  TextStyle.h
Core/Source/Core/: Application.cpp  Application.h  Event.h  InputManager.cpp  InputManager.h  Layer.cpp  Layer.h  TexturesManager.cpp  TexturesManager.h
Core/Source/DataTypes/: Bounds.cpp  Bounds.h  Vector2Ex.h
Core/Source/Serialization/: Enums_json.hpp  GridTile_json.hpp  Grid_json.hpp  JsonConverters.hpp  RenderableObject_json.hpp  Vector2Ex_json.hpp
Core/Source/UIComponents/: Enums.h  Grid.h  GridTile.cpp  GridTile.h  Menu.cpp  Menu.h  MenuOption.cpp  MenuOption.h  RenderableObject.cpp  RenderableObject.h  Text.cpp  Text.h  TextBox.cpp  TextBox.h  TextStyle.h
Resources/boards/: default.json
engine/: CMakeLists.txt
engine/include/engine/core/: application.h  event.h  input_manager.h  layer.h  textures_manager.h  transparent_string_hasher.h  vector2ex.h  vector2ex_hasher.h
engine/include/engine/serialization/: enums_json.hpp  grid_json.hpp  grid_tile_json.hpp  json_converters.hpp  json_helpers.hpp  renderable_object_json.hpp  vector2ex_json.hpp
engine/include/engine/ui/: enums.h  grid.h  grid_tile.h  menu.h  menu_option.h  renderable_object.h  text.h  text_box.h  text_box_option.h  text_box_style.h  text_menu_option.h  text_style.h
engine/src/core/: Application.cpp  Layer.cpp  TexturesManager.cpp  input_manager.cpp  textures_manager.cpp
engine/src/ui/: GridTile.cpp  Menu.cpp  MenuOption.cpp  Text.cpp  grid_tile.cpp  menu_option.cpp  renderable_object.cpp  text_box.cpp  text_box_option.cpp  text_menu_option.cpp
game/: CMakeLists.txt
game/include/game/: file_paths.h  file_utils.h  game_application.h
game/include/game/components/: board.h  client.h  entity.h  ghost.h  ghost_blinky.h  ghost_clyde.h  ghost_inky.h  ghost_pinky.h  ghost_speedy.h  node_system.h  pacman.h  pellet.h  player.h  player_input.h  profile.h  tile.h
game/include/game/layers/: base_menu.h  board_selection_menu.h  create_profile.h  game.h  game_options_menu.h  game_over_layer.h  main_menu.h  overlay_layer.h  player_join.h  profile_selection_menu_layer.h
game/include/game/serialization/: board_json.hpp  json_converters.hpp  pellet_json.hpp  profile_json.hpp  tile_json.hpp  tile_type_json.hpp
game/include/game/utils/: file_utils.h  highscore_utils.h
game/src/: file_utils.cpp  game_application.cpp  main.cpp
game/src/components/: arc.cpp  board.cpp  enitity.cpp  entity.cpp  ghost.cpp  ghost_blinky.cpp  ghost_clyde.cpp  ghost_cyde.cpp  ghost_inky.cpp  ghost_pinky.cpp  ghost_speedy.cpp  node.cpp  pacman.cpp  pellet.cpp  player.cpp  player_input.cpp  profile.cpp  tile.cpp
game/src/layers/: base_menu.cpp  board_selection_menu.cpp  create_profile.cpp  game.cpp  game_options_menu.cpp  game_over_layer.cpp  main_menu.cpp  overlay.cpp  player_join.cpp  profile_selection.cpp
game/src/utils/: file_utils.cpp  highscore_utils.cpp
